# trivial_ros

./: README.md  start_ros.sh
camera_node/: package.xml
camera_node/src/: camera_node.h  camera_pynode.py
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: camera_node.pc  jh_msgs.pc  pub_node.pc  py_pub.pc  py_sub.pc  sub_node.pc
devel/share/camera_node/cmake/: camera_nodeConfig.cmake
devel/share/jh_msgs/cmake/: jh_msgsConfig.cmake
devel/share/pub_node/cmake/: pub_nodeConfig.cmake
devel/share/py_pub/cmake/: py_pubConfig.cmake
devel/share/py_sub/cmake/: py_subConfig.cmake
devel/share/sub_node/cmake/: sub_nodeConfig.cmake
main_node/: CMakeLists.txt  listener.cpp  listener.h
ros_src/camera_node/: CMakeLists.txt  package.xml
ros_src/camera_node/include/: camera_node.h
ros_src/camera_node/src/: camera_node.cpp  camera_pynode.py  test.py
ros_src/hog_node/: CMakeLists.txt  package.xml  setup.py
ros_src/hog_node/launch/: hog_launch.launch
ros_src/hog_node/src/: hog.py
ros_src/jh_msgs/: CMakeLists.txt  package.xml  다른파일에서.txt
ros_src/jh_msgs/msg/: ex1_message.msg
ros_src/pub_node/: CMakeLists.txt  package.xml
ros_src/pub_node/src/: pub_node.cpp  pub_node.h
ros_src/sub_node/: CMakeLists.txt
src/: CMakeLists.txt  listener.cpp  package.xml
src/camera_node/: CMakeLists.txt
src/camera_node/launch/: camera_launch.launch
src/camera_node/src/: camera_node.cpp
src/jh_msgs/: CMakeLists.txt  README.md  package.xml
src/jh_msgs/msg/: AudioData.msg  FacePosition2D.msg  FacePosition2DArray.msg
src/jh_msgs/srv/: Test.srv
src/pub_node/: CMakeLists.txt  ROSMessage.hpp  package.xml
src/pub_node/include/: jh_publisher.h  pub_node.h
src/pub_node/include/pub_node/: jh_publisher.h
src/pub_node/launch/: pub_node.launch
src/pub_node/src/: BasicNode.hpp  jh_publisher.cpp  pub_node.cpp  publish_node.cpp
src/py_pub/: CMakeLists.txt  package.xml
src/py_sub/: CMakeLists.txt
src/py_sub/src/: ex_sub.py
src/sub_node/: CMakeLists.txt  package.xml
src/sub_node/launch/: sub_node.launch
src/sub_node/src/: listener.cpp  sub_node.cpp
