<?xml version="1.0"?>
<package format="2">
  <name>jh_msgs</name>
  <version>0.0.1</version>
  <description>Custom message package for ROS</description>

  <maintainer email="personaljh3@gmail.com.com">Your Name</maintainer>
  <license>BSD</license>

  <author email="personaljh3@gmail.com.com">Your Name</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
